2010-10-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, picasa.py: Added kludges for avoiding a json
	  module 1.9 bug.
	* fspot/__init__.py, sqldb.py: Dropped support for F-Spot 0.5.
	* flickr/__init__.py, picasa.py: Dropped depends on simplejson.
	  gphotoframe requires python 2.6.

2010-10-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py: Fixed a value error (issue #73).

2010-10-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.1 release.

2010-10-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/it/*: Updated Italian translation of help.
	* gphotoframe: Fixed CPU usage issue (issue #69).

2010-10-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* setup.py, makedoc.py: Added a help documentation building
	  function.
	* help/ja/ja.po: Update Japanese translation of help.

2010-10-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* setup.py: Fixed an import error (issue #70).

2010-10-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/ja/figures/*: Added Japanese localized figures.
	* help/C/*: Updated help documentation.

2010-10-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/C/gphotoframe.xml: Added some modifications.
	* help/*: Updated help documents.  Added Italian help translation.
	  Thanks Cristian Marchi!
	* makedoc.py: Added support for xml2po.

2010-10-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* COPYING, /gphotoframe.ui: Updated copyrights.
	* extra/build_help.py: Added distutils.extras hacks.

2010-10-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/ja/ja.po: Added Japanese help translation.
	* help/makedoc.py: Added a script for making GNOME documentation.
	* help/C/*: Added new help documentation.  Thanks Cristian
	  Marchi! (issue #66).
	* menu.py, menu.ui: Added new help menu item.

2010-10-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* it.po, image/tooltip.py, preferences/plugin.py: Updated
	  translation.  Thanks Cristian Marchi! (issue #65)
