@@ -1,3 +1,7 @@
+2010-10-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/__init__.py: Added user plugins dir.
+
 2010-10-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* flickr/__init__.py, picasa.py: Added kludges for avoiding a json
